# stalkernet-haskell

./: .gitignore  README.md  TODO.md  default.nix  stalkernet.cabal  update-nix
cpp/facerec/: README.md  builder.sh  default.nix
exe/: Main.hs
src/Data/Either/: Extra.hs
src/Stalkernet/: Fetching.hs  Parsing.hs  Types.hs
