name:                stalkernet
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded

  exposed-modules:       Stalkernet.Types
                       , Stalkernet.Parsing
                       , Stalkernet.Fetching
                       , Data.Either.Extra

  build-depends:         base           >=4.8  && <4.9
                       , cereal         >=0.4  && <0.5
                       , cereal-text    >=0.1  && <0.2
                       , text           >=1.2  && <1.3
                       , ansi-wl-pprint >=0.6  && <0.7
                       , lens           >=4.12 && <4.13
                       , attoparsec     >=0.13 && <0.14
                       , xml-conduit    >=1.3  && <1.4
                       , xml-lens       >=0.1  && <0.2
                       , stm            >=2.4  && <2.5
                       , async          >=2.0  && <2.1
                       , bytestring     >=0.10 && <0.11
                       , wreq           >=0.4  && <0.5
                       , html-conduit   >=1.2  && <1.3
                       , aeson

executable stalk
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -O2 -threaded

  build-depends:         base           >=4.8  && <4.9
                       , async          >=2.0  && <2.1
                       , cereal         >=0.4  && <0.5
                       , ansi-wl-pprint >=0.6  && <0.7
                       , bytestring     >=0.10 && <0.11
                       , stm            >=2.4  && <2.5
                       , aeson
                       , stalkernet
